<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/scrllvwNo1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
		android:scrollbars="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:weightSum="1"
		>
	    <TextView android:layout_width="wrap_content"
	        android:id="@+id/textView1"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:text="@string/dev_info_title"
	        android:layout_height="wrap_content">
	     </TextView>
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:id="@+id/family"
	    android:text="@string/proc_family"
	    />
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:id="@+id/type"
	    android:text="@string/proc_type"
	    />
            <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:id="@+id/version"
	    android:text="@string/proc_version"
	    />
	    <TextView
	        android:layout_width="wrap_content"
	        android:id="@+id/prod_id"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:text="@string/prod_id_string"
	        android:layout_height="wrap_content">
	    </TextView>
	    <TextView
	        android:layout_width="wrap_content"
	        android:id="@+id/die_id"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:text="@string/die_id_string"
	        android:layout_height="wrap_content">
	    </TextView>
	    <TextView
	        android:layout_width="wrap_content"
	        android:id="@+id/serial_no"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:text="@string/ser_no"
	        android:layout_height="wrap_content">
	    </TextView>
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/max_freq"
	    android:text="@string/proc_max_freq"
	    />
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/rated_freq"
	    android:text="@string/proc_rated_freq"
	    />
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/dpll_trim"
	    android:text="@string/dpll_trim_string"
	    />
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/rbb_trim"
	    android:text="@string/rbb_trim_string"
	    />
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/apps_brd_rev"
	    android:text="@string/apps_brd_rev"
	    />
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/wilink_version"
	    android:text="@string/wilink_version"
	    />
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/kernel_ver"
	    android:text="@string/kernel_version"
	    />
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/pvr_version"
	    android:text="@string/pvr_string"
	    />
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/cmd_line"
	    android:text="@string/cmd_line"
	    />
	  <TextView android:id="@+id/blank_line_5"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content">
  	</TextView>
	    <TextView
	    	android:layout_width="wrap_content"
	        android:id="@+id/textView1"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:text="@string/build_info_title"
	        android:layout_height="wrap_content">
	     </TextView>
	    <TextView
	    	android:layout_width="wrap_content"
	    	android:id="@+id/boot_ver"
	    	android:textAppearance="?android:attr/textAppearanceMedium"
	    	android:text="@string/bootloader_version"
	    	android:layout_height="wrap_content"></TextView>
	   <TextView
	    	android:layout_width="wrap_content"
	    	android:id="@+id/build_ver"
	    	android:textAppearance="?android:attr/textAppearanceMedium"
	    	android:text="@string/build_version"
	    	android:layout_height="wrap_content"></TextView>
	   <TextView
	    	android:layout_width="wrap_content"
	    	android:id="@+id/board_ver"
	    	android:textAppearance="?android:attr/textAppearanceMedium"
	    	android:text="@string/brd_rev"
	    	android:layout_height="wrap_content"></TextView>
	   <TextView
	    	android:layout_width="wrap_content"
	    	android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/build_type"
	    	android:text="@string/build_type_string"
	    	android:layout_height="wrap_content"></TextView>
	   <TextView
	    	android:layout_width="wrap_content"
	    	android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/crypto_state"
	    	android:text="@string/crypto_string"
	    	android:layout_height="wrap_content">
            </TextView>
	  <TextView android:id="@+id/blank_line_6"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content">
  	</TextView>
	    <TextView
	    	android:layout_width="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:id="@+id/textView2"
	        android:text="@string/runtime_info_title"
	        android:layout_height="wrap_content">
	     </TextView>
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/cpu1_status"
	        android:text="@string/cpu1_string"
	    />
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/governor"
	        android:text="@string/curr_gov"
	    />
            <!-- Remove the button since we cannot write to the governor
            <Button android:text="@string/gov_change_string"
		android:id="@+id/gov_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
            </Button>-->
	  <TextView android:id="@+id/blank_line_7"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content">
  	</TextView>
	</LinearLayout>
</ScrollView>
